# HPDG

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  README.md  contract-out.txt
Source/Analysis/: AudioFeatureMap.h  FeatureExtractor.cpp  FeatureExtractor.h  SampleAnalysisRequest.h  SampleAnalysisResult.h  SampleAnalyzer.cpp  SampleAnalyzer.h  SampleAwareGenerationContext.h
Source/Contract/: RuntimeMetadataContractMain.cpp
Source/Core/: GeneratorParams.h  LaneDefaults.h  LaneEditorCapabilities.h  NoteEvent.h  PatternAuthoringState.h  PatternProject.h  PatternProjectSerialization.cpp  PatternProjectSerialization.h  ProjectLaneAccess.h  ProjectStateController.h  ReferenceHatSkeleton.h  RuntimeLaneLifecycle.cpp  RuntimeLaneLifecycle.h  RuntimeLaneProfile.h  SoundLayerState.h  SoundTargetDescriptor.h  Sub808TrackAccess.h  Sub808Types.h  TrackInfo.h  TrackRegistry.cpp  TrackRegistry.h  TrackSemantics.h  TrackState.h  TrackType.h  TransportSnapshot.h
Source/Engine/: BoomBapEngine.cpp  BoomBapEngine.h  DrillEngine.cpp  DrillEngine.h  GenreEngine.h  GrooveEngine.cpp  GrooveEngine.h  HiResTiming.h  HumanizeEngine.cpp  HumanizeEngine.h  LaneSampleBank.cpp  LaneSampleBank.h  MidiExportEngine.cpp  MidiExportEngine.h  PreviewEngine.cpp  PreviewEngine.h  RapEngine.cpp  RapEngine.h  SampleLibraryManager.cpp  SampleLibraryManager.h  StyleDefaults.cpp  StyleDefaults.h  StyleDefinitionLoader.cpp  StyleDefinitionLoader.h  StyleDefinitionResolver.cpp  StyleDefinitionResolver.h  StyleInfluence.cpp  StyleInfluence.h  TempoInterpretation.h  TrapEngine.cpp  TrapEngine.h  VelocityEngine.cpp  VelocityEngine.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Services/: MidiImportService.cpp  MidiImportService.h  StyleLabReferenceBrowserService.cpp  StyleLabReferenceBrowserService.h  StyleLabReferenceService.cpp  (+3 more)
TempMidi/: BoomBapPattern_1773526986362_2.mid  BoomBapPattern_1773527062035_3.mid  BoomBapPattern_1773528335474_18.mid  BoomBapPattern_1774091731591_0.mid  BoomBapPattern_1774095341910_2.mid  BoomBapPattern_1774095617030_5.mid  BoomBapPattern_1774095673900_7.mid  BoomBapPattern_1774099351654_0.mid  BoomBapPattern_1774215955743_0.mid  BoomBapPattern_1774216142352_3.mid  BoomBapPattern_1774216188561_4.mid  BoomBapPattern_1774216425699_7.mid  BoomBapPattern_1774721207710_0.mid  BoomBapTrack_1773526980827_1.mid  BoomBapTrack_1773527049202_0.mid  BoomBapTrack_1773527058178_2.mid  BoomBapTrack_1773527124378_4.mid  BoomBapTrack_1773527142858_5.mid  BoomBapTrack_1773527169410_6.mid  BoomBapTrack_1773527264075_7.mid  BoomBapTrack_1773527400986_8.mid  BoomBapTrack_1773527473122_0.mid  BoomBapTrack_1773527514178_1.mid  BoomBapTrack_1773527517562_2.mid  BoomBapTrack_1773527550635_3.mid  BoomBapTrack_1773527558882_4.mid  BoomBapTrack_1773527568667_5.mid  BoomBapTrack_1773527855875_0.mid  BoomBapTrack_1773527872803_1.mid  BoomBapTrack_1773527908107_2.mid  BoomBapTrack_1773527928354_4.mid  BoomBapTrack_1773527951371_5.mid  BoomBapTrack_1773528045771_6.mid  BoomBapTrack_1773528067522_7.mid  BoomBapTrack_1773528075226_8.mid  BoomBapTrack_1773528085450_9.mid  BoomBapTrack_1773528102666_10.mid  BoomBapTrack_1773528130114_11.mid  BoomBapTrack_1773528266338_13.mid  BoomBapTrack_1773528279338_14.mid  (+84 more)
Tests/: CoreStage0Tests.cpp  LaneBoundaryRegressionTests.cpp  TrackSemanticsTests.cpp
(+151 files in other folders)
